2005-08-27  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewrendererpalette.c
	(gimp_view_renderer_palette_init): initialize renderer->columns
	to != 0 to avoid floating point exceptions on initial layout
	calculation. Fixes bug #314663.

2005-08-27  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/common/gradmap.c: applied a patch by David Gowers,
	which makes palette-map behave the same as gradient-map.
	Fixes bug #313458.

2005-08-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_image)
	* plug-ins/jpeg/jpeg-save.c (save_image): set tile cache.

2005-08-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/svg.c: deal with SVG API change. This is a
	compile-time check and thus somewhat ugly because it requires a
	recompile of the plug-in when updating librsvg. Fixes bug #314400.

2005-08-26  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/about-dialog.c (about_dialog_add_logo): move the
	logo to the top of the dialog.

2005-08-26  Tor Lillqvist  <tml@novell.com>

	* app/plug-in/plug-in.c (plug_in_prep_for_exec, plug_in_open):
	Instead of passing a child_setup function whose body is ifdeffed
	out on Win32 to g_spawn_async(), pass NULL for child_setup on
	Win32. Newer g_spawn_async() implementations on Win32 warn if
	child_setup functions are attempted to be used, as they don't make
	sense because without any fork(), they are called in the parent
	process.

2005-08-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/blend-anim.scm: removed newline from
	description.

2005-08-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/sel2path/curve.c (new_curve_list)
	* plug-ins/sel2path/fit.c (split_at_corners) 
	* plug-ins/winicon/icosave.c (ico_init_data): initialize variables.

2005-08-25  Michael Natterer  <mitch@gimp.org>

	* configure.in: define FOO_DISABLE_DEPRECATED for the new stable
	versions of GTK+ and Pango.

	Check for poppler >= 0.4.1, they did another API change.
